tests/compile_fail/call-eq.stderr
error: expected parentheses: #[call(...)]
 --> $DIR/call-eq.rs:7:12
  |
7 |     #[call = len]
  |            ^
